feat(road): 添加纵断面竖曲线验证功能
- 实现竖曲线重叠检测功能
- 添加竖曲线范围检查机制
- 实现PVI桩号顺序验证逻辑
- 添加纵断面验证报告项生成
- 在垂直对齐编辑器中显示验证消息
- 更新多语言资源文件中的验证提示信息